# ten-days-of-voice-agents-2025

./: .gitignore  SETUP_GUIDE.md
Day 10/: README.md
Day 10/backend/: pyproject.toml
Day 10/backend/src/: __init__.py  improv_agent.py  scenarios.json
Day 6/: .gitignore  README.md
Day 7/: README.md
Day 7/backend/: TESTING_GUIDE.md  mock_order_progress.py  run_order_simulator.py  server.py
Day 7/backend/orders/: .gitkeep
Day 7/backend/src/: order_agent.py
Day 7/frontend/: app-config.ts  pnpm-lock.yaml
Day 7/frontend/components/app/: preconnect-message.tsx  session-view.tsx  welcome-view.tsx
Day 7/frontend/components/livekit/: chat-entry.tsx
Day 7/frontend/styles/: globals.css
Day 8/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_GUIDE.md
Day 8/backend/: .env.example  pyproject.toml  run.ps1
Day 8/backend/sessions/: .gitkeep  session_Robert_20251129_001041.json  session_example.json
Day 8/backend/src/: __init__.py  game_master.py
backend/: .gitignore  SDR_AGENT_README.md
backend/leads/: lead_20251126_010038.json
backend/src/: agent.py  razorpay_faq.json
challenges/: Day 5 Task.md
day-5/: README.md
day-5/backend/leads/: lead_20251126_010020.json
day-5/backend/src/: agent.py  company_faq.json
day-5/frontend/: app-config.ts
day-5/frontend/components/app/: welcome-view.tsx
frontend/components/app/: beverage-visualizer.tsx  session-view.tsx  welcome-view.tsx
shared-data/: day4_tutor_content.json
